--- a/src/app/lista-tarefas/lista-tarefas.component.html
+++ b/src/app/lista-tarefas/lista-tarefas.component.html
@@ -4,7 +4,7 @@
       Criar nova tarefa
     </button>
   </div>
-  <form class="formulario ff-prompt"
+  <form class="formulario ff-prompt" @showState
     [formGroup]="formulario"
     *ngIf="formAberto">
     <label for="descricao">Descrição da tarefa</label>
